# ZNote

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  mainwindow.cpp  mainwindow.ui  vcpkg.json
docs/: dir_structure.md
resources/: ZNote.qrc
resources/styles/: style.qss
src/: CMakeLists.txt  StyleManager.cpp  StyleManager.h  ZNote.qrc  main.cpp  main_window.cpp  main_window.h  main_window.ui  mainwindow.cpp  mainwindow.h
src/config/: app_settings.h
src/core/: CMakeLists.txt  document.cpp  document.h
src/resources/: style.qss
src/ui/: CMakeLists.txt  style_manager.cpp
src/ui/dialogs/: CMakeLists.txt  about_dialog.cpp  about_dialog.h  about_dialog.ui
src/ui/mainwindow/: CMakeLists.txt  main_window.cpp  main_window.h  main_window.ui
src/ui/widgets/: CMakeLists.txt  tab_page.cpp  tab_page.h  tab_page.ui  tab_widget.cpp  tab_widget.h  text_editor.cpp  text_editor.h  tool_button.cpp  tool_button.h
vs/: ZNote.sln
vs/ZNote/: ZNote.qrc  ZNote.vcxproj  ZNote.vcxproj.filters
